fixed：使用white-space: nowrap修复行内元素在特定情景换行的问题

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -70,6 +70,8 @@ $useAuxiOtl: false;
   margin: -8px -16px;  /* 抵消Popover的padding */
 
   .menu-item {
+    white-space: nowrap;
+
     .link {
       display: block;
       line-height: 3;
